# KEIpy

./: .gitignore  environment.yml  history.md  kei.py  kei_util.py  pyproject.toml
.claude/: settings.json
docs/: history.md  installation.md  releases.md
examples/WAP_LTER/: WAP.yml  WAP_LTER.py
examples/dt_effects/: dt_effects.py
f90/: 60.0  Makefile  Makefile_CC.txt  Makefile_test.mk  __init__.py  kei_atm.f90  kei_common.f90  kei_common.mod  kei_eco.f90  kei_eco.mod  kei_eco_0818.f90  kei_ecocommon.f90  kei_ecocommon.mod  kei_fluxes.f90  kei_hacks.f90  kei_hacks.mod  kei_hacks_DEEP.f90  kei_hacks_FREE.f90  kei_hacks_IC.f90  kei_hacks_ITC.f90  kei_hacks_TC.f90  kei_hacks_backup.f90  kei_ice.f90  kei_ice.mod  kei_icecommon.f90  kei_icecommon.mod  kei_init.f90  kei_kinds.f90  kei_kpp.f90  kei_link.f90  kei_link_test.f90  kei_ocn.f90  kei_ocncommon.mod  kei_parameters.f90  kei_parameters.mod  kei_radcommon.f90  kei_subs1D.f90  kei_subs1d.mod  kei_sw.f90  macmods_calc.f90  (+32 more)
keipy/: __init__.py  kei_runtime_params.yml  postprocess.py  simulation.py  util.py
test_data/: kf_200_100_2000.nc  test_output.nc  test_output_keipy_params.csv
tests/: __init__.py  conftest.py  helpers_forcing.py  test_fortran_extension.py  test_kei_forcing.py  test_kei_main_block.py  test_kei_util.py
tools/: shrink_test_netcdfs.py
