[project]
name = "keipy"
version = "0.9.0"
requires-python = ">=3.11"
description = "KPP-Ecosystem-Ice (KEI) Python driver and Fortran bindings"

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "fortran: needs compiled `f90.kei` extension",
  "slow: long integration tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]
