# Build ``f90/kei``: ``make -C f90 kei`` (see ``f90/Makefile``).
#
# Python >= 3.12: NumPy f2py uses Meson. Fortran + LAPACK binaries (``openblas``, ``compilers``)
# are not published on PyPI; keep them in Conda alongside Python. Use the pinned stack in:
#   environment.yml
# Typical one-liner (conda-forge only):
#   mamba install --override-channels -c conda-forge compilers liblapack meson ninja charset-normalizer
# Then ``pip install -e .`` (or conda ``pip``, ``numpy``, ``pytest`` from the same yaml).
#
# If your network blocks public repos, configure a conda-forge mirror; automated agents should not
# assume they can reach any package host.

[project]
name = "keipy"
version = "0.9.0"
requires-python = ">=3.11"
description = "KPP-Ecosystem-Ice (KEI) Python driver and Fortran bindings"

[project.optional-dependencies]
# Pip-installed dev tools only. Fortran toolchain / OpenBLAS / Meson: see ``environment.yml``.
dev = [
  "pytest>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "fortran: needs compiled `f90.kei` extension",
  "slow: long integration tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]
